src/objects/SSO_Workflow__c.object
<CustomObject>
    <fields>
        <fullName>Admin_Request__c</fullName>
        <formula>Related_Contact__r.Partner_Administrator__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Admin Request?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_Name__c</fullName>
        <label>Application Name</label>
        <picklist>
            <picklistValues>
                <fullName>Deal Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Provisioning Tool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-PORTAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELICENSING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZIPZEBRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MICROSITES</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Application_Owner__c</fullName>
        <label>Application Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Access_Process_Builders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_Source_System__c</fullName>
        <label>Application Source System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Type__c</fullName>
        <formula>TEXT(Maps_to_Application__r.Approval_Type__c)</formula>
        <label>Approval Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Access_Process_Builders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attribute_10__c</fullName>
        <label>Attribute 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_1__c</fullName>
        <label>Attribute 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_2__c</fullName>
        <label>Attribute 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maps_to_Application__c</fullName>
        <label>Maps to Application</label>
        <referenceTo>SSO_Application_Mapping__c</referenceTo>
        <relationshipName>User_Access_Process_Builders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OPT_Request_Approved_by_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is created to check if the Order Provisioning Request made by Partner Contact is approved by Partner Admin.</description>
        <label>OPT Request Approved by Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Account_Number__c</fullName>
        <formula>Related_Account__r.Partner_Program_ID_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Primary_Role__c</fullName>
        <formula>TEXT(Related_Contact__r.Primary_Role__c)</formula>
        <label>Partner Primary Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Region__c</fullName>
        <formula>TEXT(Related_Account__r.Partner_Region__c)</formula>
        <label>Partner Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Secondary_Role__c</fullName>
        <label>Partner Secondary Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Tool_Access__c</fullName>
        <label>Partner Tool Access</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Zone__c</fullName>
        <label>Partner Zone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Error__c</fullName>
        <description>This field is created to capture the errors if any.</description>
        <label>Process Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Process_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provisioned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Updated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deactivated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Create User Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update User Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revoked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deactivate User Failed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Provisioned_Rejected_Date__c</fullName>
        <description>This field holds the date and time when a request was either provisioned or rejected.</description>
        <label>Provisioned/Rejected Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Provisioning_Type__c</fullName>
        <formula>TEXT(Maps_to_Application__r.Provisioning_Type__c)</formula>
        <label>Provisioning Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ready_for_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Account__c</fullName>
        <label>Related Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>User_Access_Process_Builders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Contact_Admin__c</fullName>
        <label>Related Contact Admin</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>User_Access_Process_Builders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Contact_Region__c</fullName>
        <formula>TEXT(Related_Account__r.Partner_Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Contact Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SSO Workflow (Related Contact)</relationshipLabel>
        <relationshipName>User_Access_Process_Builders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_User__c</fullName>
        <label>Related User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SSO_Workflow</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Source__c</fullName>
        <label>Request Source</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delegated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>API</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PIC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>Create User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deactivate User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Grant Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Revoke Access</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requested_Date_Formula__c</fullName>
        <formula>DATEVALUE( Requested_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requested Date Formula</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requested_Date__c</fullName>
        <label>Requested Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SSO_Request_Id__c</fullName>
        <label>SSO Request Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Attributes__c</fullName>
        <formula>Related_Contact__r.Siebel_Attributes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Siebel Attributes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Type__c</fullName>
        <label>User Type</label>
        <picklist>
            <picklistValues>
                <fullName>Partner</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>SSO Workflow</label>
    <listViews>
        <fullName>APAC_PIC_Queue_SSO_Workflow</fullName>
        <filterScope>Queue</filterScope>
        <label>APAC PIC Queue</label>
        <queue>APAC PIC Queue</queue>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Related_Account__c</columns>
        <columns>Partner_Region__c</columns>
        <columns>Email__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Request_Source__c</columns>
        <columns>Process_Status__c</columns>
        <columns>Application_Name__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>EMEA_PIC_Queue_SSO_Workflow</fullName>
        <filterScope>Queue</filterScope>
        <label>EMEA PIC Queue</label>
        <queue>EMEA PIC Queue</queue>
    </listViews>
    <listViews>
        <fullName>LATAM_PIC_Queue_SSO_Workflow</fullName>
        <filterScope>Queue</filterScope>
        <label>LATAM PIC Queue</label>
        <queue>LATAM PIC Queue</queue>
    </listViews>
    <listViews>
        <fullName>NA_PIC_Queue_SSO_Workflow</fullName>
        <filterScope>Queue</filterScope>
        <label>NA PIC Queue</label>
        <queue>NA PIC Queue</queue>
    </listViews>
    <nameField>
        <displayFormat>7{000000}</displayFormat>
        <label>Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SSO Workflow</pluralLabel>
    <recordTypes>
        <fullName>Customer</fullName>
        <active>true</active>
        <label>Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Others</fullName>
        <active>true</active>
        <label>Others</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partner</fullName>
        <active>true</active>
        <label>Partner</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>